<resources>
    <string name="app_name">PraBot</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="mulai">Mulai</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="prabot">PraBot</string>
    <string name="prabot2">Pramuka Robot</string>
    <string name="go">Go</string>
    <string-array name="sandi_huruf">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string name="help_deskrip1">
        1. Isi Username dan Password sesuai dengan yang ID Robot lalu klik Login.
    </string>
    <string name="help_deskrip2">
        Setelah Login Success, Pilih tombol About untuk melihat Keterangan Pembuat dan Keterangan Aplikasi.
    </string>
    <string name="help_deskrip3">
        3. Pilih tombol Help untuk membaca tata cara menggunakan Aplikasi.
    </string>
    <string name="help_deskrip4">
        4. Pilih tombol Mulai untuk memulai menggerakan Robot.
    </string>
    <string name="help_deskrip5">
        5. Dan pilih tombol Exit untuk keluar.
    </string>
    <string name="selesai">Selesai</string>
    <string name="prabot3">Pramuka Robot</string>
    <string name="isi_about">Aplikasi Prabot ( Pramuka Robot ) ini merupakan aplikasi yang  berfungsi sebagai sistem  kendali Robot Semaphore</string>
    <string name="versi">Prabot v 1.0</string>
    <string name="biodata">Biodata</string>
    <string name="nama">Nama : Imanika Dewi</string>
    <string name="nim">NIM : 201681230</string>
    <string name="jurusan">Jurusan : Teknik Informatiika</string>
    <string name="esaunggul">Universitas Esa Unggul Citra Raya</string>
    <string name="kembali">Kembali</string>
</resources>
