<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".Activity.HomeActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prabot"
        android:textAlignment="center"
        android:textColor="@color/colorcokelat"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_pramuka_robot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:text="@string/prabot3"
        android:textAlignment="center"
        android:textColor="@color/colorcokelat"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_mulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pramuka_robot"
        android:layout_marginTop="80dp"
        android:background="@drawable/button"
        android:text="@string/mulai"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_mulai"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/help"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_help"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/about"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_about"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/exit"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

</RelativeLayout>