<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_biodata"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    app:cardCornerRadius="10dp"
    tools:context=".AboutBioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biodata"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/profilfoto" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/nama"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nim"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/jurusan"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_esaunggul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/esaunggul"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="42dp"
            android:background="@color/colorBgicon"
            android:text="@string/kembali"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.v7.widget.CardView>