<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    app:cardCornerRadius="10dp"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:text="@string/about"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="25dp"
            android:textStyle="bold" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/tv_isiabout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_about"
            android:textColor="@color/colorBlack" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="70dp"
            >
            <TableRow>
                <Button
                    android:id="@+id/btn_biodata"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBrown"
                    android:text="@string/biodata"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btn_selesai_about"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBrown"
                    android:layout_marginLeft="56dp"
                    android:text="@string/selesai"
                    android:textColor="@color/colorWhite" />
            </TableRow>
        </TableLayout>


        <TextView
            android:id="@+id/tv_versi_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/versi"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

</android.support.v7.widget.CardView>