<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prabot"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_pramuka_robot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:text="@string/prabot3"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_account"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tv_pramuka_robot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <LinearLayout
        android:id="@+id/linear_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_account"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorBgicon"
            android:src="@drawable/ic_email_white_45dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="@color/colorBguser"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_pass"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_username">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorBgicon"
            android:src="@drawable/ic_lock_white_45dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBguser"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_pass"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/colorBgicon"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/loading_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:visibility="gone" />
</RelativeLayout>