<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/img_account"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tv_login"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_account"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="@color/colorBrown"
            android:textColorHint="@color/colorWhite"
            android:inputType="textEmailAddress">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:drawableStart="@drawable/ic_email_white_45dp"
                android:textColorHighlight="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBrown"
            android:textColorHint="@color/colorWhite"
            android:layout_marginTop="25dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_white_45dp"
                android:hint="@string/pass"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorWhite"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@color/colorBrownDark"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>


</RelativeLayout>